--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "babel-loader": "^8.2.2",
     "prettier": "^2.2.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
   }
