--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "mini-css-extract-plugin": "^1.3.3",
     "prettier": "^2.2.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.11.0",
