--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.3",
     "prettier": "^2.2.1",
     "url-loader": "^4.1.1",
