--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
+  },
+  "dependencies": {
+    "moment": "^2.29.1"
   }
 }
